<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NameInput"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="-113dp">

    <EditText
        android:id="@+id/NameInputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter your name..."
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="289dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <Button
        android:id="@+id/NameInputSubmitted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit name"
        android:onClick="onNameSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>